--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,27 @@
+
+/*Google sign in Button*/
+
+.preferred-login {
+  padding-top: 8px;
+  padding-bottom: 11px;
+  background-color: #FFF;
+  border-radius: 3px;
+  border: 1px solid #d6d9dc;
+  color: #535a60;
+  text-align: center;
+  cursor: pointer;
+  margin: 15px auto;
+  width: 50%;
+}
+.preferred-login img{
+  width: 4%;
+}
+span{
+  padding: 0px 5px;
+}
+
+
+
 body{
   font-family:arial;
   font-size:11px;
